--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl"
   Google search results) and in your feed.xml site description.
 
 baseurl: /overthinkin
-url: http://overthinkin.git.io
+url: http://overthinkin.github.io
 
 permalink: /:year-:month/:title
 timezone:
