--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 
-title: Catbook #Your awesome title
-email: 528794@naver.com
+title: Genie
+email: jine1999@gmail.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-baseurl: /overthinkin
-url: http://overthinkin.github.io
+baseurl: "/overthinkin"
+url: "https://overthinkin.github.io"
 
 permalink: /:year-:month/:title
-timezone:
+timezone: Asia/Seoul
 
 favicon: /assets/img/favicon.ico
 
