--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 
-title: Genie
+title: under trial
 email: jine1999@gmail.com
-description: > # this means to ignore newlines until "baseurl"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > # Even if you're lazy, do what you have to do.
 
 baseurl:
 url: "https://overthinkin.github.io"
@@ -18,9 +15,9 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: Catbook
-  pic: /assets/img/cat.jpg
-  picAlt: "catbook"
+  name: Genie
+  pic: /assets/img/IMG_6622.jpg
+  picAlt: "profilepic"
   job: a category-centric theme
   aboutme: true # comment this out if you don't need the 'about' page.
 
